--- a/YoutubeBlog.Web/Views/Home/Index.cshtml
+++ b/YoutubeBlog.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Article>
+﻿@model List<ArticleDto>
 @{
     ViewData["Title"] = "Home Page";
 
@@ -14,6 +14,7 @@
 {
     <h1>@item.Title</h1><br />
     <h3>@item.Content</h3>
+    <h3>@item.CreatedDate</h3>
     <br />
     <br />
 }
