--- a/YoutubeBlog.Web/Views/_ViewImports.cshtml
+++ b/YoutubeBlog.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using YoutubeBlog.Web
 @using YoutubeBlog.Web.Models
+@using YoutubeBlog.Entity.DTOs.Articles;
 @using YoutubeBlog.Entity.Entities;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
