--- a/YoutubeBlog.Web/Views/Home/Index.cshtml
+++ b/YoutubeBlog.Web/Views/Home/Index.cshtml
@@ -13,8 +13,8 @@
 @foreach (var item in Model)
 {
     <h1>@item.Title</h1><br />
-    <h3>@item.Content</h3>
-    <h3>@item.CreatedDate</h3>
+@*    <h3>@item.Content</h3>
+*@    <h3>@item.CreatedDate</h3>
     <br />
     <br />
 }
