--- a/YoutubeBlog.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/YoutubeBlog.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using YoutubeBlog.Entity.Entities;
 @using YoutubeBlog.Entity.DTOs.Users
+@using YoutubeBlog.Entity.DTOs.Articles
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
