--- a/YoutubeBlog.Web/Areas/Admin/Views/Article/Update.cshtml
+++ b/YoutubeBlog.Web/Areas/Admin/Views/Article/Update.cshtml
@@ -1,5 +1,48 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model ArticleUpdateDto
+
+<div class="container-xxl flex-grow-1 container-p-y">
+    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Makale Yönetimi /</span> Makale Ekle</h4>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card mb-4">
+                <div class="card-header">
+
+                    <form asp-controller="Article" asp-action="Update" method="post" enctype="multipart/form-data">
+                        <div class="card-body">
+                            <input type="hidden" asp-for="Id"/>
+                            <div class="form-group">
+                                <label asp-for="CategoryId" class="form-label">Kategori</label>
+                                <select id="categoryList" class="form-control mb-3" asp-for="CategoryId" asp-items="@(new SelectList(Model.Categories,"Id","Name"))"></select>
+                                <span asp-validation-for="CategoryId" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group">
+                                <label asp-for="Title" class="form-label">Başlık</label>
+                                <input asp-for="Title"
+                                       type="text"
+                                       class="form-control mb-3"
+                                       id="defaultFormControlInput"
+                                       aria-describedby="defaultFormControlHelp" />
+                            </div>
+
+                            <div class="form-group">
+                                <label asp-for="Content" class="form-label">İçerik</label>
+                                <textarea asp-for="Content"
+                                          type="text"
+                                          class="form-control mb-3"
+                                          style="min-height:300px"
+                                          id="defaultFormControlInput"
+                                          aria-describedby="defaultFormControlHelp">
+                                </textarea>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-success btn-block">Kaydet</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
