--- a/YoutubeBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/YoutubeBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -127,7 +127,7 @@
                     <li class="menu-item">
                         <a asp-area="Admin" asp-controller="Article" asp-action="Index" class="menu-link">
                             <i class='menu-icon bx bx-paper-plane'></i>
-                            <div data-i18n="Analytics">Makale Paneli</div>
+                            <div data-i18n="Analytics">Makale Yönetimi</div>
                         </a>
                     </li>
                     <li class="menu-item">
