--- a/YoutubeBlog.Web/Areas/Admin/Views/Article/Add.cshtml
+++ b/YoutubeBlog.Web/Areas/Admin/Views/Article/Add.cshtml
@@ -8,6 +8,7 @@
                 <div class="card-header">
 
                     <form asp-controller="Article" asp-action="Add" method="post" enctype="multipart/form-data">
+                        <div asp-validation-summary="ModelOnly"></div>
                         <div class="card-body">
 
                             <div class="form-group">
@@ -21,20 +22,22 @@
                                 <input asp-for="Title"
                                        type="text"
                                        class="form-control mb-3"
-                                       id="defaultFormControlInput"                                      
+                                       id="defaultFormControlInput"
                                        aria-describedby="defaultFormControlHelp" />
+                                <span asp-validation-for="Title" class="text-danger"></span>
                             </div>
 
                             <div class="form-group">
                                 <label asp-for="Content" class="form-label">İçerik</label>
                                 <textarea asp-for="Content"
-                                       type="text"
-                                       class="form-control mb-3"
-                                       style="min-height:300px"
-                                       id="defaultFormControlInput"
-                                       aria-describedby="defaultFormControlHelp" >
+                                          type="text"
+                                          class="form-control mb-3"
+                                          style="min-height:300px"
+                                          id="defaultFormControlInput"
+                                          aria-describedby="defaultFormControlHelp">
+                                <span asp-validation-for="Content" class="text-danger"></span>
                                 </textarea>
-                            </div>                            
+                            </div>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-success btn-block">Kaydet</button>
                             </div>
