--- a/YoutubeBlog.Web/Areas/Admin/Views/Article/Update.cshtml
+++ b/YoutubeBlog.Web/Areas/Admin/Views/Article/Update.cshtml
@@ -9,11 +9,12 @@
                 <div class="card-header">
 
                     <form asp-controller="Article" asp-action="Update" method="post" enctype="multipart/form-data">
+                        <div asp-validation-summary="ModelOnly"></div>
                         <div class="card-body">
                             <input type="hidden" asp-for="Id"/>
                             <div class="form-group">
                                 <label asp-for="CategoryId" class="form-label">Kategori</label>
-                                <select id="categoryList" class="form-control mb-3" asp-for="CategoryId" asp-items="@(new SelectList(Model.Categories,"Id","Name"))"></select>
+                                <select id="categoryList" class="form-control" asp-for="CategoryId" asp-items="@(new SelectList(Model.Categories,"Id","Name"))"></select>
                                 <span asp-validation-for="CategoryId" class="text-danger"></span>
                             </div>
 
@@ -24,6 +25,8 @@
                                        class="form-control mb-3"
                                        id="defaultFormControlInput"
                                        aria-describedby="defaultFormControlHelp" />
+                                <span asp-validation-for="Title" class="text-danger"></span>
+
                             </div>
 
                             <div class="form-group">
@@ -34,6 +37,8 @@
                                           style="min-height:300px"
                                           id="defaultFormControlInput"
                                           aria-describedby="defaultFormControlHelp">
+                                <span asp-validation-for="Content" class="text-danger"></span>
+
                                 </textarea>
                             </div>
                             <div class="form-group">
