--- a/YoutubeBlog.Web/Areas/Admin/Views/Article/Add.cshtml
+++ b/YoutubeBlog.Web/Areas/Admin/Views/Article/Add.cshtml
@@ -39,6 +39,16 @@
                                 </textarea>
                             </div>
                             <div class="form-group">
+                                <label asp-for="Photo" class="form-label">Resim Seçiniz</label>
+                                <input asp-for="Photo"
+                                          type="file"
+                                          accept="image/*"
+                                          class="form-control mb-3"
+                                          id="defaultFormControlInput"
+                                          aria-describedby="defaultFormControlHelp">
+                                <span asp-validation-for="Photo" class="text-danger"></span>                                
+                            </div>
+                            <div class="form-group">
                                 <button type="submit" class="btn btn-success btn-block">Kaydet</button>
                             </div>
                         </div>
